# gfa2bin

./: Cargo.toml  README.md
data/example_data/: edges.txt  fam_testGraph.fam  testGraph.gfa
scripts/: manhattan.nearest.py  manhattan.nodes.py  qq.py
src/: counting.rs  helper.rs  logging.rs  main.rs  matrix.rs  matrix_wrapper.rs  pack_reader.rs  writer.rs
src/alignment/: align_main.rs  mod.rs  pack.rs
src/block/: block_main.rs
src/convert/: bfile.rs  core.rs  fam.rs  gfa.rs  matrix.rs  mod.rs  pack.rs  writer.rs
src/convert2/: core.rs  gfa.rs  matrix.rs  mod.rs  pack.rs  writer.rs
src/core/: bfile.rs  core.rs  helper.rs  mod.rs  writer.rs
src/cov/: align_main.rs  cov_main.rs  mod.rs  pack.rs
src/filter/: filter_main.rs  mod.rs
src/find/: find_main.rs  mod.rs  readGEMMA.rs  read_gemma.rs
src/graph/: graph_main.rs  mod.rs  parser.rs
src/merge/: merge_main.rs  mod.rs
src/mod/: input_data.rs  mod.rs  mod_main.rs
src/nearest/: mod.rs  nearest_main.rs
src/plink/: bfile.rs  fam.rs  mod.rs
src/remove/: input_data.rs  mod.rs  remove_main.rs
src/split/: mod.rs  split_main.rs
src/subpath/: mod.rs  subpath_main.rs
src/view/: view_main.rs
src/window/: mod.rs  window_main.rs
tests/: align_test.rs  cli.rs  convert_gfa_tests.rs  convert_modify_tests.rs  convert_pack_tests.rs  cov_test.rs  filter_test.rs  find_test.rs  gfa_tests.rs  graph_test.rs  merge_split_test.rs  nearest_test.rs  pack.rs  remove_test.rs  subpath_test.rs  view_test.rs
workflows/: graph-gwas-pipeline
workflows/config/: config.yaml
workflows/config_template/: config.yaml  packlist.csv  samples.csv
workflows/schemas/: config.schema.yaml
(+51 files in other folders)
