[package]
name = "gfa2bin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "=3.0.0-beta.4"
#gfaR_wrapper = {path = "../gfaR_wrapper"}
gfaR_wrapper = {git = "https://github.com/MoinSebi/gfaR_wrapper"}
packing = {path = "../packing"}