[package]
name = "gfa2bin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "=3.0.0-beta.4"
#gfaR_wrapper = {path = "../gfaR_wrapper"}
gfaR_wrapper = {git = "https://github.com/MoinSebi/gfaR_wrapper"}
packing = {git = "https://github.com/MoinSebi/packing"}
bimap = "=0.6.1"
hashbrown = "0.11"
bitvec = "1"
byteorder = "1.0.0"
bifurcation = {git = "https://github.com/MoinSebi/bifurcation"}
gfa-reader = {git = "https://github.com/MoinSebi/gfa-reader"}



log = "0.4.0"
env_logger = "0.8.4"
chrono = "0.4"


[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
cfg-if = "0.1"