[package]
name = "gfa2bin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "=3.0.0-beta.4"
packing = {git = "https://github.com/MoinSebi/packing"}
hashbrown = "0.11"
bitvec = "1"
byteorder = "1.0.0"
gfa-reader = {git = "https://github.com/MoinSebi/gfa-reader"}
rayon = "1.10.0"


log = "0.4.0"
env_logger = "0.8.4"
chrono = "0.4"


[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
cfg-if = "0.1"
